# contours

./: CMakeLists.txt  README.md
cmake/: Find3Delight.cmake  FindFAR.cmake  FindFreestyle.cmake  FindGLFW.cmake  FindHBR.cmake  FindOSD.cmake  findPRMAN.cmake
freestyle/: CMakeLists.txt  main.cpp
freestyle/app/: AppAboutWindow.cpp  AppCanvas.cpp  AppCanvas.h  AppConfig.cpp  AppConfig.h  AppDensityCurvesWindow.cpp  AppDensityCurvesWindow.h  AppGL2DCurvesViewer.cpp  AppGL2DCurvesViewer.h  AppGLWidget.cpp  AppGLWidget.h  AppInteractiveShaderWindow.cpp  AppInteractiveShaderWindow.h  AppMainWindow.cpp  AppMainWindow.h  AppOptionsWindow.cpp  AppOptionsWindow.h  AppStyleWindow.cpp  AppStyleWindow.h  CMakeLists.txt  ConfigIO.cpp  ConfigIO.h  Controller.cpp  Controller.h  QGLBasicWidget.cpp  QGLBasicWidget.h  QStyleModuleSyntaxHighlighter.h  Run.cpp  Run.h
freestyle/geometry/: Bezier.cpp  Bezier.h  CMakeLists.txt  FastGrid.cpp  FastGrid.h  FitCurve.cpp  FitCurve.h  GeomUtils.cpp  GeomUtils.h  Grid.cpp  Grid.h  Polygon.h  SweepLine.h  VecMat.h  matrix_util.cpp  matrix_util.h  normal_cycle.cpp  normal_cycle.h
freestyle/image/: CMakeLists.txt  GaussianFilter.cpp  GaussianFilter.h  Image.h
freestyle/rendering/: CMakeLists.txt  GLDebugRenderer.cpp  GLDebugRenderer.h  GLRenderer.cpp  GLRenderer.h  GLSelectRenderer.cpp  GLStrokeRenderer.cpp  GLStrokeRenderer.h  GLUtils.cpp  GLUtils.h  pbuffer.h
freestyle/scene_graph/: CMakeLists.txt  DrawingStyle.h  IndexedFaceSet.cpp  IndexedFaceSet.h  Node.h  NodeCamera.h  NodeDrawingStyle.h  NodeGroup.cpp  NodeGroup.h  NodeLight.h  NodeShape.h  NodeTransform.cpp  NodeTransform.h  PLYFileLoader.cpp  PLYFileLoader.h  Rep.h  ScenePrettyPrinter.cpp
freestyle/stroke/: AdvancedFunctions0D.cpp  AdvancedFunctions0D.h  AdvancedFunctions1D.cpp  AdvancedFunctions1D.h  BasicStrokeShaders.cpp  BasicStrokeShaders.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Chain.cpp  Chain.h  ChainingIterators.cpp  ChainingIterators.h  ContextFunctions.cpp  ContextFunctions.h  Curve.cpp  Curve.h  CurveIterators.h  Operators.cpp  Operators.h  PSStrokeRenderer.cpp  PSStrokeRenderer.h  Predicates1D.h  SVGStrokeRenderer.cpp  SVGStrokeRenderer.h  Stroke.cpp  Stroke.h  StrokeIO.cpp  StrokeIO.h  StrokeIterators.h  StrokeLayer.cpp  StrokeRep.cpp  StrokeRep.h  StyleModule.h  TextStrokeRenderer.cpp  TextStrokeRenderer.h
freestyle/swig/: CMakeLists.txt  Freestyle.i  Freestyle.py  Freestyle_wrap.h
freestyle/system/: BaseIterator.h  CMakeLists.txt  FreestyleConfig.h  Precision.h  PythonInterpreter.h  StringUtils.cpp  StringUtils.h
freestyle/view_map/: CMakeLists.txt  FEdgeXDetector.cpp  FEdgeXDetector.h  Functions0D.cpp  Functions0D.h  Functions1D.cpp  Interface0D.h  Interface1D.cpp  Interface1D.h  PunchOut.cpp  PunchOut.h  Silhouette.cpp  Silhouette.h  SilhouetteGeomEngine.cpp  SilhouetteGeomEngine.h  SteerableViewMap.cpp  SteerableViewMap.h  ViewEdgeXBuilder.cpp  ViewEdgeXBuilder.h  ViewMap.cpp  ViewMap.h  ViewMapAdvancedIterators.h  ViewMapBuilder.cpp  ViewMapBuilder.h  ViewMapIO.h  ViewMapIterators.h  ViewMapTesselator.h  grid2d.cpp  grid2d.h  predicates.c  triangle_triangle_intersection.c  tritri_isectline.c
freestyle/winged_edge/: CMakeLists.txt  Curvature.h  Nature.h  WEdge.cpp  WEdge.h  WFillGrid.cpp  WFillGrid.h  WXEdge.cpp  WXEdge.h  WXEdgeBuilder.cpp  WXEdgeBuilder.h  WingedEdgeBuilder.cpp  WingedEdgeBuilder.h
scripts/: cameraRif.py  npr.py  settings.py  settings.py.example
scripts/freestyle/doc/: ._Doxyfile  ._MainClasses.h  ._MainPage.h  ._StyleModuleDocumentation.h  ._freestylefooter.html  ._freestyleheader.html  ._grey.css  ._html  ._linuxinstall.h  ._macosxinstall.h  ._tutorial.h  ._wininstall.h  Doxyfile  MainClasses.h  MainPage.h  StyleModuleDocumentation.h  freestylefooter.html  freestyleheader.html  grey.css  linuxinstall.h  macosxinstall.h  tutorial.h  wininstall.h
scripts/freestyle/style_modules/: ChainingIterators.py  Functions0D.py  POregionOnly.py  PredicatesU1D.py  SIsonly.py  all.py  plain.py  (+34 more)
tess_RifFilter/: CMakeLists.txt  VecMat.h  cameraModel.cpp  cameraModel.h  chart.h  chartFunctions.h  flowline.cpp  meshFunctions.h  paramPoint.cpp  paramPoint.h  paramPointFunctions.h  refineContour.cpp  refineContour.h  refineContourFunctions.h  rib2mesh.cpp  rib2mesh.h  subdiv.cpp  subdiv.h  vdtess.cpp
tess_RifFilter/opensubdiv/: CMakeLists.txt  version.h
tess_RifFilter/opensubdiv/far/: bilinearSubdivisionTables.h  catmarkSubdivisionTables.h  catmarkSubdivisionTablesFactory.h  loopSubdivisionTables.h  loopSubdivisionTablesFactory.h  meshFactory.h  multiMeshFactory.h  patchMap.h  patchParam.h  patchTables.h  patchTablesFactory.h  stencilTables.h  stencilTablesFactory.h  subdivisionTables.h  subdivisionTablesFactory.h  vertexEditTables.h  vertexEditTablesFactory.h
tess_RifFilter/opensubdiv/hbr/: bilinear.h  catmark.h  cornerEdit.h  creaseEdit.h  faceEdit.h  fvarData.h  fvarEdit.h  halfedge.h  loop.h  mesh.h  subdivision.h  vertex.h  vertexEdit.h
tess_RifFilter/opensubdiv/osd/: CMakeLists.txt  cpuComputeContext.cpp  cpuComputeContext.h  cpuComputeController.cpp  cpuComputeController.h  cpuD3D11VertexBuffer.cpp  cpuD3D11VertexBuffer.h  cpuEvalLimitContext.h  cpuEvalLimitController.cpp  cpuEvalLimitController.h  cpuEvalLimitKernel.cpp  cpuEvalLimitKernel.h  cpuEvalStencilsContext.h  cpuEvalStencilsController.cpp  cpuEvalStencilsController.h  cpuGLVertexBuffer.cpp  cpuGLVertexBuffer.h  cpuKernel.cpp  cpuKernel.h  cpuSmoothNormalContext.h  cpuSmoothNormalController.cpp  cpuVertexBuffer.cpp  cpuVertexBuffer.h  drawContext.h  evalLimitContext.h  gcdComputeController.cpp  gcdComputeController.h  gcdKernel.cpp  gcdKernel.h  glMesh.h  glVertexBuffer.cpp  glVertexBuffer.h  mesh.h  ompComputeController.cpp  ompComputeController.h  ompEvalStencilsController.cpp  ompEvalStencilsController.h  ompKernel.cpp  ompKernel.h  ompSmoothNormalController.cpp  (+8 more)
tess_RifFilter/opensubdiv/osdutil/: adaptiveEvaluator.cpp  adaptiveEvaluator.h  evaluator_capi.cpp  evaluator_capi.h  mesh.cpp  mesh.h  refiner.cpp  refiner.h  topology.cpp  topology.h  uniformEvaluator.cpp  uniformEvaluator.h
(+749 files in other folders)
