FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

SET(Python_ADDITIONAL_VERSIONS 2.7)
FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
message("PYTHON: " ${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

set(LIBRARY_OUTPUT_PATH
    ${PROJECT_BINARY_DIR}/lib/python
)
set(CMAKE_SWIG_OUTDIR ${PROJECT_BINARY_DIR}/lib/python)


SET_SOURCE_FILES_PROPERTIES(Freestyle.i PROPERTIES CPLUSPLUS ON)

SWIG_ADD_LIBRARY(Freestyle LANGUAGE python SOURCES Freestyle.i)
SWIG_LINK_LIBRARIES(Freestyle app view_map winged_edge geometry rendering scene_graph stroke image system ${PYTHON_LIBRARIES})

